add conditional leason

--- a/java_leason.html
+++ b/java_leason.html
@@ -15,5 +15,13 @@
 <div id="Myclock">
     <input type="text" id="clock"/>
 </div>
+
+<div class="conditional">
+    <input type="text" name="first-tb" id="first-tb" value="">
+    <input type="text" name="second-tb" id="second-tb" value="">
+    <input type="text" name="result-tb" disabled="disabled" id="result-tb" value="">
+    <button onclick="getBiggerNumber()">Get Bigger Number</button>
+</div>
+
 </body>
 </html>
