fix conditional statemens

--- a/java_leason.html
+++ b/java_leason.html
@@ -14,6 +14,7 @@
 </div>
 <div id="Myclock">
     <input type="text" id="clock"/>
+
 </div>
 
 <div class="conditional">
@@ -21,6 +22,14 @@
     <input type="text" name="second-tb" id="second-tb" value="">
     <input type="text" name="result-tb" disabled="disabled" id="result-tb" value="">
     <button onclick="getBiggerNumber()">Get Bigger Number</button>
+</div>
+
+<div>
+        <p>Enter a Number of day between 1 to 7</p>
+        <input type="text" id="number" />
+        <button onclick="display_case();">Check</button><br />
+        <div id="result"><b></b></div>
+
 </div>
 
 </body>
